--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
-	<title>THIS IS MINE</title>
+	<title>i4creed</title>
 </head>
 
 <body>
+
 Hello World, it's me!
+
 </body>
 </html>
